Fix #13 : Long Service name push content out of viewport

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -115,7 +115,7 @@ a:hover {
     border-radius: 6px;
     text-align: center;
     background-color: hsl(0, 0%, 10%); /*black-bis from Bulma*/
-    padding: 0.75rem 1.5rem;
+    padding: 0.75rem 3rem;
     margin: 0.5rem;
 }
 
@@ -155,7 +155,7 @@ a:hover {
 
 .tfa-grid .tfa-container {
   flex-direction: column;
-  padding: 0 1.5rem;
+  // padding: 0 1.5rem;
 }
 
 .tfa-list .tfa-container {
@@ -171,18 +171,24 @@ a:hover {
 //     padding: 0 1rem 0 0;
 // }
 
+.tfa-cell {
+  display: flex;
+}
+
 .tfa-grid .tfa-checkbox,
 .tfa-grid .tfa-dots,
 .tfa-grid .tfa-edit {
-  display: flex;
   align-items: center;
   padding: 0.5rem 0 0 0;
+}
+
+.tfa-grid .tfa-checkbox {
+  padding: 0;
 }
 
 .tfa-list .tfa-checkbox,
 .tfa-list .tfa-dots,
 .tfa-list .tfa-edit {
-  display: flex;
   align-items: center;
     padding: 0
 }
@@ -191,12 +197,16 @@ a:hover {
   margin-left: 1.5rem;
 }
 
-.tfa-grid .tfa-content {
+.tfa-content {
     flex-grow: 1;
     overflow: hidden;
 }
+
+// .tfa-grid .tfa-content {
+// }
+
 .tfa-list .tfa-content {
-    width: 100%;
+    padding-right: 1rem;
 }
 
 .tfa-dots {
@@ -211,7 +221,7 @@ a:hover {
 
 .tfa-text {
     display: block;
-    max-width: 300px;
+    // max-width: 300px;
     cursor: pointer;
 }
 
